--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Piszę i czytam</string>
     <string name="image_description">notebook on a table</string>
-    <string name="nazwa_firmy">Piszę i czytam \nUrszula Drabińska</string>
-    <string name="redakcja_korekta">Redakcja i korekta tekstów </string>
-    <string name="adres">Kościelna 66 lok. 48 \n05&#8211;200 Wołomin</string>
-    <string name="nip">NIP: 1251465866</string>
-    <string name="www">pisze-czytam.pl</string>
-    <string name="pic_fb">pisze.czytam</string>
-    <string name="pic_instagram">\@przeczytane</string>
+    <string name="company_name">Piszę i czytam \nUrszula Drabińska</string>
+    <string name="company_description">Redakcja i korekta tekstów </string>
+    <string name="address">Kościelna 66 lok. 48 \n05&#8211;200 Wołomin</string>
+    <string name="tax_number">NIP: 1251465866</string>
+    <string name="www_address">pisze-czytam.pl</string>
+    <string name="full_www">http://pisze-czytam.pl</string>
+    <string name="company_fb">pisze.czytam</string>
+    <string name="company_instagram">\@przeczytane</string>
     <string name="e_mail">pisze.czytam\@gmail.com</string>
     <string name="e_mail_2">pisze.czytam\n\@gmail.com</string>
     <string name="phone">+48 791 462 452</string>
