--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,18 @@
 <resources>
     <string name="app_name">Piszę i czytam</string>
     <string name="image_description">notebook on a table</string>
-    <string name="company_name">Piszę i czytam \nUrszula Drabińska</string>
-    <string name="company_description">Redakcja i korekta tekstów </string>
-    <string name="address">Kościelna 66 lok. 48 \n05&#8211;200 Wołomin</string>
-    <string name="tax_number">NIP: 1251465866</string>
+    <string name="company_name">Piszę i czytam</string>
+    <string name="company_description">Proofreading and editing online. The best smooth for your Polish texts.</string>
+    <string name="company_description_short">The best smooth for your Polish texts!</string>
+    <string name="address">Kościelna 66/48 \n05&#8211;200 Wołomin \nPoland</string>
     <string name="www_address">pisze-czytam.pl</string>
     <string name="full_www">http://pisze-czytam.pl</string>
     <string name="company_fb">pisze.czytam</string>
+    <string name="fb_address">http://facebook.com/pisze.czytam</string>
     <string name="company_instagram">\@przeczytane</string>
+    <string name="insta_address">http://instagram.com/przeczytane</string>
     <string name="e_mail">pisze.czytam\@gmail.com</string>
     <string name="e_mail_2">pisze.czytam\n\@gmail.com</string>
     <string name="phone">+48 791 462 452</string>
+    <string name="write_us">Write to us &#8213; we\'ll read you for sure.</string>
 </resources>
