Add Polish translation

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -4,4 +4,5 @@
     <string name="company_description">Korekta i redakcja tekstów online. Dopieścimy Twój tekst.</string>
     <string name="address">Kościelna 66/48  05&#8211;200 Wołomin  Polska</string>
     <string name="write_us">Napisz do nas &#8213; na pewno przeczytamy.</string>
+    <string name="app_name">Korekta tekstów</string>
 </resources>
